--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Inicio</title>
 </head>
+
 <body>
-    <h1>Álvaro Pastor</h1>
-    <h2>Inteligencia artificial y desarrollo web</h2>
-    <h3>Esta es la página de inicio</h3>
+    <h1 class="intro" id="nombre">Álvaro Pastor</h1>
+    <h2 class="intro">Inteligencia artificial y desarrollo web</h2>
+    <!-- <h3>Esta es la página de inicio</h3> -->
 
     <header>
         <nav class="secciones">
             <ul>
-                <li><a href="">Marketing</a></li>
-                <li><a href="">Desarrollo web</a></li>
+                <li><a href="" class="nav-links">Marketing</a></li>
+                <li><a href="" class="nav-links">Desarrollo web</a></li>
             </ul>
         </nav>
     </header>
@@ -23,16 +25,23 @@
     <h2>Mi curriculum</h2>
     <h3>Trabajo en Inversus</h3>
     <h3>Resultados</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus commodi velit sit dolor placeat, delectus similique, praesentium a natus explicabo sequi eius ipsam magnam, eaque illum fuga repellendus recusandae labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus commodi velit sit dolor placeat, delectus
+        similique, praesentium a natus explicabo sequi eius ipsam magnam, eaque illum fuga repellendus recusandae
+        labore.</p>
+
+        <iframe src="https://alvaropas17.github.io/web_gala_imparables/" width="1500" height="800"></iframe>
 
 
     <h3>¿Cómo lo conseguí?</h3>
-    <p>Cuando llegué a la empresa tenían una página web que no se indexaba en Google, redes sociales que carecían de personalidad y estrategia y tampoco tenían métricas para saber qué estaba pasando.</p>
+    <p>Cuando llegué a la empresa tenían una página web que no se indexaba en Google, redes sociales que carecían de
+        personalidad y estrategia y tampoco tenían métricas para saber qué estaba pasando.</p>
 
     <p>Lo primero que había que ver era qué tipo de contenido estaban subiendo, de qué se trataba.</p>
 
     <p>Luego tenía que ver hacia qué público se querían dirigir.</p>
 
-    <p>Y luego la joya de la corona <b>Google Analytics y Google Search Console</b>. Cuando yo llegué no había nada y tampoco tenían control sobre ello porque hasta la fecha no habían trabajado eso in house</p>
+    <p>Y luego la joya de la corona <b>Google Analytics y Google Search Console</b>. Cuando yo llegué no había nada y
+        tampoco tenían control sobre ello porque hasta la fecha no habían trabajado eso in house</p>
 </body>
+
 </html>
