curriculum con css

--- a/index.html
+++ b/index.html
@@ -1,47 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Inicio</title>
+    <title>Portafolio Profesional</title>
 </head>
 
 <body>
-    <h1 class="intro" id="nombre">Álvaro Pastor</h1>
-    <h2 class="intro">Inteligencia artificial y desarrollo web</h2>
-    <!-- <h3>Esta es la página de inicio</h3> -->
 
-    <header>
-        <nav class="secciones">
+    <nav class="main-nav">
+        <ul>
+            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#profesional">Objetivo Profesional</a></li>
+            <li><a href="#formacion">Formación</a></li>
+            <li><a href="#idiomas">Idiomas</a></li>
+            <li><a href="#experiencia">Experiencia</a></li>
+            <li><a href="#competencias">Competencias</a></li>
+            <li><a href="#interes">Otros Datos</a></li>
+            <li><a href="#proyecto">Proyecto Destacado</a></li>
+        </ul>
+    </nav>
+    <main class="container">
+
+        <header>
+            <h1>Álvaro Pastor</h1>
+            <h2>Desarrollo web y marketing</h2>
+        </header>
+
+        <section class="section" id="contacto">
+            <h3>Datos de Contacto</h3>
             <ul>
-                <li><a href="" class="nav-links">Marketing</a></li>
-                <li><a href="" class="nav-links">Desarrollo web</a></li>
+                <li><strong>Correo electrónico: </strong><a href="mailto:">alvpastor17@gmail.com</a></li>
+                <li><strong>Teléfono: </strong><a href="tel:+34633962600">+34 633 96 26 00</a></li>
+                <li><strong>LinkedIn:</strong> <a
+                        href="https://es.linkedin.com/in/%C3%A1lvaro-pastor-periago-89912820a">LinkedIn</a></li>
+                <li><strong>GitHub: </strong><a href="https://github.com/alvaropas17?tab=repositories">Github</a></li>
             </ul>
-        </nav>
-    </header>
+        </section>
 
-    <h2>Mi curriculum</h2>
-    <h3>Trabajo en Inversus</h3>
-    <h3>Resultados</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus commodi velit sit dolor placeat, delectus
-        similique, praesentium a natus explicabo sequi eius ipsam magnam, eaque illum fuga repellendus recusandae
-        labore.</p>
+        <section class="section" id="profesional">
+            <h3>Objetivo Profesional</h3>
+            <p>
+                Desarrollar soluciones innovadoras en el ámbito del desarrollo web,
+                aplicando mis conocimientos y experiencia para optimizar procesos y mejorar la experiencia de usuario.
+                Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito del
+                equipo.
+            </p>
+        </section>
 
-        <iframe src="https://alvaropas17.github.io/web_gala_imparables/" width="1500" height="800"></iframe>
+        <section class="section" id="formacion">
+            <h3>Formación y Títulos</h3>
+            <h4>Formación Académica</h4>
+            <ul>
+                <li><strong>Grado Superior en Desarrollo de Aplicaciones Web</strong> - FP San Antonio</li>
+                <li><strong>Grado en Marketing Digital y Redes Sociales</strong> - UCAM 2020 - 2025</li>
+            </ul>
 
+            <h4>Cursos y Certificaciones</h4>
+            <ul>
+                <li>Certificado en Google Analytics 4 (GA4)</li>
+                <li>Curso Avanzado de SEO y SEM</li>
+                <li>Curso de JavaScript Moderno</li>
+            </ul>
+        </section>
 
-    <h3>¿Cómo lo conseguí?</h3>
-    <p>Cuando llegué a la empresa tenían una página web que no se indexaba en Google, redes sociales que carecían de
-        personalidad y estrategia y tampoco tenían métricas para saber qué estaba pasando.</p>
+        <section class="section" id="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+                <li><strong>Español:</strong> Nativo</li>
+                <li><strong>Inglés:</strong> B2 (Intermedio-Alto)</li>
+                <li><strong>Francés:</strong> A1 (Básico)</li>
+            </ul>
+        </section>
 
-    <p>Lo primero que había que ver era qué tipo de contenido estaban subiendo, de qué se trataba.</p>
+        <section class="section" id="experiencia">
+            <h3>Experiencia Profesional</h3>
+            <div class="job-description">
+                <h4>Especialista en marketing digital y desarrollo web en Inversus</h4>
+                <p>
+                    Cuando me incorporé a la empresa, la presencia digital era casi inexistente. La página web carecía
+                    de indexación en Google, las redes sociales no tenían una estrategia clara y no existían métricas
+                    para entender el rendimiento.
+                </p>
+                <p>
+                    Mi primer paso fue realizar un análisis exhaustivo del contenido existente y definir una audiencia
+                    objetivo. Luego, implementé herramientas clave como <strong>Google Analytics</strong> y
+                    <strong>Google Search Console</strong> para obtener información valiosa sobre el comportamiento de
+                    los usuarios y la visibilidad en los motores de búsqueda, lo cual no se había hecho de manera
+                    interna hasta ese momento.
+                </p>
+                <p>
+                    Estos cambios resultaron en una mejora significativa en la visibilidad y el compromiso en línea de
+                    la empresa.
+                </p>
+            </div>
+        </section>
 
-    <p>Luego tenía que ver hacia qué público se querían dirigir.</p>
+        <section class="section" id="competencias">
+            <h3>Competencias Profesionales</h3>
+            <h4>Competencias Técnicas</h4>
+            <ul>
+                <li><strong>Desarrollo Web:</strong> HTML, CSS, JavaScript</li>
+                <li><strong>Marketing Digital:</strong> SEO, Análisis de Datos, Redes Sociales</li>
+                <li><strong>Herramientas:</strong> Google Analytics, Google Search Console</li>
+            </ul>
 
-    <p>Y luego la joya de la corona <b>Google Analytics y Google Search Console</b>. Cuando yo llegué no había nada y
-        tampoco tenían control sobre ello porque hasta la fecha no habían trabajado eso in house</p>
+            <h4>Competencias Personales y Sociales</h4>
+            <ul>
+                <li>Trabajo en equipo y colaboración</li>
+                <li>Capacidad de resolución de problemas</li>
+                <li>Aprendizaje continuo y adaptabilidad</li>
+            </ul>
+        </section>
+
+        <section class="section" id="interes">
+            <h3>Otros Datos de Interés</h3>
+            <p>
+                Voluntario en proyectos de desarrollo social. Apasionado de la tecnología, la música y el senderismo.
+            </p>
+        </section>
+
+        <section class="project-section" id="proyecto">
+            <h3>Proyecto Destacado</h3>
+            <div class="iframe-container">
+                <iframe src="https://alvaropas17.github.io/web_gala_imparables/"
+                    title="Proyecto de Gala Imparables"></iframe>
+            </div>
+        </section>
+
+    </main>
+
 </body>
 
 </html>
