cambios en el html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <section class="section" id="interes">
             <h3>Otros Datos de Interés</h3>
             <p>
-                Voluntario en proyectos de desarrollo social. Apasionado de la tecnología, la música y el senderismo.
+                Participación en el desarrollo web de empresas con planificación de estrategia de marketing.
             </p>
         </section>
 
