--- a/index.html
+++ b/index.html
@@ -6,44 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Portafolio Profesional</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <nav class="main-nav">
-        <ul>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="#profesional">Objetivo Profesional</a></li>
-            <li><a href="#formacion">Formación</a></li>
-            <li><a href="#idiomas">Idiomas</a></li>
-            <li><a href="#experiencia">Experiencia</a></li>
-            <li><a href="#competencias">Competencias</a></li>
-            <li><a href="#interes">Otros Datos</a></li>
-            <li><a href="#proyecto">Proyecto Destacado</a></li>
-        </ul>
+        <div class="nav-container">
+            <button class="mobile-menu-toggle" aria-label="Abrir menú de navegación">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            <ul class="nav-menu">
+                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#profesional">Objetivo</a></li>
+                <li><a href="#formacion">Formación</a></li>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#competencias">Competencias</a></li>
+                <li><a href="#idiomas">Idiomas</a></li>
+                <li><a href="#proyecto">Proyecto</a></li>
+                <li><a href="#interes">Otros Datos</a></li>
+            </ul>
+        </div>
     </nav>
+
     <main class="container">
 
         <header>
             <h1>Álvaro Pastor</h1>
-            <h2>Desarrollo web y marketing</h2>
+            <h2>Desarrollo Web y Marketing Digital</h2>
         </header>
 
         <section class="section" id="contacto">
             <h3>Datos de Contacto</h3>
-            <ul>
-                <li><strong>Correo electrónico: </strong><a href="mailto:">alvpastor17@gmail.com</a></li>
-                <li><strong>Teléfono: </strong><a href="tel:+34633962600">+34 633 96 26 00</a></li>
-                <li><strong>LinkedIn:</strong> <a
-                        href="https://es.linkedin.com/in/%C3%A1lvaro-pastor-periago-89912820a">LinkedIn</a></li>
-                <li><strong>GitHub: </strong><a href="https://github.com/alvaropas17?tab=repositories">Github</a></li>
+            <ul class="contacto-list">
+                <li><i class="icon fas fa-envelope"></i> <strong>Correo: </strong><a
+                        href="mailto:alvpastor17@gmail.com">alvpastor17@gmail.com</a></li>
+                <li><i class="icon fas fa-phone"></i> <strong>Teléfono: </strong><a href="tel:+34633962600">+34 633 96
+                        26 00</a></li>
+                <li><i class="icon fab fa-linkedin"></i> <a
+                        href="https://es.linkedin.com/in/%C3%A1lvaro-pastor-periago-89912820a"
+                        target="_blank">LinkedIn</a></li>
+                <li><i class="icon fab fa-github"></i> <a href="https://github.com/alvaropas17?tab=repositories"
+                        target="_blank">Github</a></li>
             </ul>
         </section>
 
         <section class="section" id="profesional">
             <h3>Objetivo Profesional</h3>
             <p>
-                Desarrollar soluciones innovadoras en el ámbito del desarrollo web,
+                Desarrollar soluciones innovadoras en el ámbito del <b>desarrollo web</b> y el <b>marketing digital</b>,
                 aplicando mis conocimientos y experiencia para optimizar procesos y mejorar la experiencia de usuario.
                 Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito del
                 equipo.
@@ -51,87 +64,130 @@
         </section>
 
         <section class="section" id="formacion">
-            <h3>Formación y Títulos</h3>
-            <h4>Formación Académica</h4>
-            <ul>
-                <li><strong>Grado Superior en Desarrollo de Aplicaciones Web</strong> - FP San Antonio</li>
-                <li><strong>Grado en Marketing Digital y Redes Sociales</strong> - UCAM 2020 - 2025</li>
-            </ul>
+            <h2>Formación y Títulos</h2>
 
-            <h4>Cursos y Certificaciones</h4>
-            <ul>
-                <li>Certificado en Google Analytics 4 (GA4)</li>
-                <li>Curso Avanzado de SEO y SEM</li>
-                <li>Curso de JavaScript Moderno</li>
-            </ul>
-        </section>
+            <h3>Formación Académica</h3>
+            <div class="item-detalle">
+                <p class="fecha-duracion">2024 - Actualmente</p>
+                <p class="titulo-principal"><strong>Grado Superior en Desarrollo de Aplicaciones Web</strong></p>
+                <p class="institucion-lugar">FP San Antonio</p>
+                <p class="descripcion-breve">
+                    Formación técnica en el diseño, desarrollo e implementación de aplicaciones web.
+                </p>
+            </div>
+            <div class="item-detalle">
+                <p class="fecha-duracion">2020 - 2025</p>
+                <p class="titulo-principal"><strong>Grado en Marketing Digital y Redes Sociales</strong></p>
+                <p class="institucion-lugar">UCAM</p>
+                <p class="descripcion-breve">
+                    Estudios enfocados en la aplicación de estrategias de marketing en entornos digitales y la gestión
+                    profesional de plataformas sociales.
+                </p>
+            </div>
+            <hr class="separator">
 
-        <section class="section" id="idiomas">
-            <h3>Idiomas</h3>
-            <ul>
-                <li><strong>Español:</strong> Nativo</li>
-                <li><strong>Inglés:</strong> B2 (Intermedio-Alto)</li>
-                <li><strong>Francés:</strong> A1 (Básico)</li>
-            </ul>
+            <h3>Formación Complementaria</h3>
+            <div class="item-detalle">
+                <p class="fecha-duracion">2016 - 2018</p>
+                <p class="titulo-principal"><strong>Experiencia en el Extranjero</strong></p>
+                <p class="descripcion-breve">
+                    Estancias de inmersión lingüística en Inglaterra e Irlanda durante los veranos.
+                </p>
+            </div>
+            <div class="item-detalle">
+                <p class="fecha-duracion">Fecha del Curso</p>
+                <p class="titulo-principal"><strong>Curso de Creación de Empresas</strong></p>
+                <p class="institucion-lugar">Cámara de Comercio</p>
+            </div>
+            <div class="item-detalle">
+                <p class="fecha-duracion">2010 - 2015</p>
+                <p class="titulo-principal"><strong>Campamentos de Inglés</strong></p>
+                <p class="descripcion-breve">
+                    Participación en campamentos de inglés a nivel nacional.
+                </p>
+            </div>
         </section>
 
         <section class="section" id="experiencia">
             <h3>Experiencia Profesional</h3>
-            <div class="job-description">
-                <h4>Especialista en marketing digital y desarrollo web en Inversus</h4>
-                <p>
-                    Cuando me incorporé a la empresa, la presencia digital era casi inexistente. La página web carecía
-                    de indexación en Google, las redes sociales no tenían una estrategia clara y no existían métricas
-                    para entender el rendimiento.
-                </p>
-                <p>
-                    Mi primer paso fue realizar un análisis exhaustivo del contenido existente y definir una audiencia
-                    objetivo. Luego, implementé herramientas clave como <strong>Google Analytics</strong> y
-                    <strong>Google Search Console</strong> para obtener información valiosa sobre el comportamiento de
-                    los usuarios y la visibilidad en los motores de búsqueda, lo cual no se había hecho de manera
-                    interna hasta ese momento.
-                </p>
-                <p>
-                    Estos cambios resultaron en una mejora significativa en la visibilidad y el compromiso en línea de
-                    la empresa.
-                </p>
+            <div class="item-detalle">
+                <p class="fecha-duracion">Fecha Inicio - Fecha Fin</p>
+                <p class="titulo-principal"><strong>Especialista en Marketing Digital y Desarrollo Web</strong></p>
+                <p class="institucion-lugar">Inversus</p>
+                <div class="descripcion-breve">
+                    <p>Auditoría del estado de la web y las redes sociales para planificar futuras acciones. <br> Acciones realizadas:</p>
+                    <ul>
+                        <li>- Implementación de herramientas clave como <b>Google Analytics</b> y <b>Google Search Console</b> que permitió medir el comportamiento de los usuarios en la web.
+                        </li>
+                        <li>- Análisis exhaustivo del contenido y definición de la audiencia objetivo.</li>
+                        <li>- Mejora significativa en la <b>visibilidad online</b> y el <b>engagement</b> de la empresa,
+                            sentando las bases de las métricas de rendimiento.</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
         <section class="section" id="competencias">
             <h3>Competencias Profesionales</h3>
-            <h4>Competencias Técnicas</h4>
-            <ul>
-                <li><strong>Desarrollo Web:</strong> HTML, CSS, JavaScript</li>
-                <li><strong>Marketing Digital:</strong> SEO, Análisis de Datos, Redes Sociales</li>
-                <li><strong>Herramientas:</strong> Google Analytics, Google Search Console</li>
-            </ul>
 
-            <h4>Competencias Personales y Sociales</h4>
-            <ul>
-                <li>Trabajo en equipo y colaboración</li>
-                <li>Capacidad de resolución de problemas</li>
-                <li>Aprendizaje continuo y adaptabilidad</li>
+            <div class="competencia-grupo">
+                <h4>Competencias Técnicas</h4>
+                <ul class="tags-list">
+                    <li>Desarrollo Web (HTML, CSS, JS)</li>
+                    <li>Marketing Digital (SEO, Email Marketing)</li>
+                    <li>Análisis de Datos (GA4, GSC)</li>
+                    <li>WordPress / CMS</li>
+                </ul>
+            </div>
+
+            <div class="competencia-grupo">
+                <h4>Competencias Personales y Sociales</h4>
+                <ul class="tags-list">
+                    <li>Trabajo en equipo y colaboración</li>
+                    <li>Capacidad de resolución de problemas</li>
+                    <li>Aprendizaje continuo y adaptabilidad</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="section" id="idiomas">
+            <h3>Idiomas</h3>
+            <ul class="idiomas-list">
+                <li>
+                    <strong>Español:</strong> Nativo
+                    <span class="nivel-idioma nivel-nativo">Nativo</span>
+                </li>
+                <li>
+                    <strong>Inglés:</strong> B1 PET
+                    <span class="nivel-idioma nivel-a1">B1</span>
+                </li>
+                <!-- <li>
+                    <strong>Francés:</strong> A1 (Básico)
+                    <span class="nivel-idioma nivel-a1">A1</span>
+                </li> -->
             </ul>
         </section>
 
-        <section class="section" id="interes">
-            <h3>Otros Datos de Interés</h3>
-            <p>
-                Participación en el desarrollo web de empresas con planificación de estrategia de marketing.
-            </p>
-        </section>
-
-        <section class="project-section" id="proyecto">
+        <section class="section" id="proyecto">
             <h3>Proyecto Destacado</h3>
+            <p class="descripcion-proyecto">Visualización interactiva de un proyecto web completo. Haz clic para
+                interactuar o explorar el repositorio.</p>
             <div class="iframe-container">
                 <iframe src="https://alvaropas17.github.io/web_gala_imparables/"
                     title="Proyecto de Gala Imparables"></iframe>
             </div>
         </section>
 
-    </main>
+        <section class="section" id="interes">
+            <h3>Otros Datos de Interés</h3>
+            <ul>
+                <li><b>Transporte:</b> Uso de transporte público y taxi.</li>
+            </ul>
+        </section>
 
+    </main>
+    <script src="https://kit.fontawesome.com/tu_kit_id.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
