quito iframe y pongo enlace a web imparables

--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
                 <p class="fecha-duracion">Fecha Inicio - Fecha Fin</p>
                 <p class="titulo-principal"><strong>Especialista en Marketing Digital y Desarrollo Web</strong></p>
                 <p class="institucion-lugar">Inversus</p>
-                <div class="descripcion-breve">
-                    <p>Auditoría del estado de la web y las redes sociales para planificar futuras acciones. <br> Acciones realizadas:</p>
+                <div>
+                    <p>Auditoría del estado de la web y las redes sociales para planificar futuras acciones. <br>
+                        Acciones realizadas:</p>
                     <ul>
-                        <li>- Implementación de herramientas clave como <b>Google Analytics</b> y <b>Google Search Console</b> que permitió medir el comportamiento de los usuarios en la web.
+                        <li>- Implementación de herramientas clave como <b>Google Analytics</b> y <b>Google Search
+                                Console</b> que permitió medir el comportamiento de los usuarios en la web.
                         </li>
                         <li>- Análisis exhaustivo del contenido y definición de la audiencia objetivo.</li>
                         <li>- Mejora significativa en la <b>visibilidad online</b> y el <b>engagement</b> de la empresa,
@@ -170,12 +172,10 @@
 
         <section class="section" id="proyecto">
             <h3>Proyecto Destacado</h3>
-            <p class="descripcion-proyecto">Visualización interactiva de un proyecto web completo. Haz clic para
-                interactuar o explorar el repositorio.</p>
-            <div class="iframe-container">
-                <iframe src="https://alvaropas17.github.io/web_gala_imparables/"
-                    title="Proyecto de Gala Imparables"></iframe>
-            </div>
+            <!-- <p class="descripcion-proyecto">Visualización interactiva de un proyecto web completo. Haz clic para
+                interactuar o explorar el repositorio.</p> -->
+            <a href="https://github.com/alvaropas17/web_gala_imparables" target="_blank">Proyecto Salud21 gala
+                imparables</a>
         </section>
 
         <section class="section" id="interes">
