--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Profesional - Álvaro Pastor (Premium)</title>
+    <title>Portafolio Profesional - Álvaro Pastor (Premium Mobile First)</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -28,18 +28,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="./styles/styles.css">
-
+    
     <style>
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio */
+            overflow: hidden;
+            border-radius: 0.5rem;
+        }
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
         .float-wa {
             position: fixed;
             width: 60px;
             height: 60px;
             bottom: 40px;
-            right: 40px;
+            right: 20px; /* Ajuste para móvil: más cerca del borde */
             background-color: #25d366;
             color: #FFF;
             border-radius: 50px;
@@ -53,11 +65,12 @@
             margin-top: 15px;
         }
     </style>
+
 </head>
 
 <body class="bg-soft-gray font-sans" style="scroll-behavior: smooth;">
 
-    <nav class="sticky top-0 z-10 bg-white shadow-lg border-b border-gray-200 py-3">
+    <nav class="hidden sm:block sticky top-0 z-10 bg-white shadow-lg border-b border-gray-200 py-3">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-center items-center h-12">
                 <div class="flex space-x-8">
@@ -80,41 +93,41 @@
 
     <main class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 my-12 md:my-20">
 
-        <header class="text-center mb-16 p-8 bg-white rounded-xl shadow-2xl border-t-4 border-accent">
-            <h1 class="text-5xl md:text-6xl font-extrabold text-primary-dark tracking-tight">Álvaro Pastor</h1>
-            <h2 class="text-xl md:text-2xl text-gray-500 font-light mt-2 tracking-wide">Desarrollo Web y Marketing
+        <header class="text-center mb-16 p-6 sm:p-8 bg-white rounded-xl shadow-2xl border-t-4 border-accent">
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-primary-dark tracking-tight">Álvaro Pastor</h1>
+            <h2 class="text-lg sm:text-xl md:text-2xl text-gray-500 font-light mt-2 tracking-wide">Desarrollo Web y Marketing
                 Digital</h2>
         </header>
 
-        <section class="grid md:grid-cols-2 gap-6 bg-white p-6 md:p-8 rounded-xl shadow-lg mb-12" id="contacto">
-            <h2 class="text-3xl font-semibold text-primary-dark md:col-span-2 border-b pb-3 mb-4"><i
+        <section class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white p-6 md:p-8 rounded-xl shadow-lg mb-12" id="contacto">
+            <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark md:col-span-2 border-b pb-3 mb-4"><i
                     class="fas fa-address-card mr-3 text-accent"></i>Datos de Contacto</h2>
 
             <div class="flex items-center space-x-3">
-                <i class="fas fa-envelope text-accent text-xl"></i>
+                <i class="fas fa-envelope text-accent text-xl flex-shrink-0"></i>
                 <a href="mailto:alvpastor17@gmail.com"
-                    class="text-gray-600 hover:text-accent transition">alvpastor17@gmail.com</a>
+                    class="text-gray-600 hover:text-accent transition break-all">alvpastor17@gmail.com</a>
             </div>
             <div class="flex items-center space-x-3">
-                <i class="fas fa-phone-alt text-accent text-xl"></i>
+                <i class="fas fa-phone-alt text-accent text-xl flex-shrink-0"></i>
                 <a href="tel:+34633962600" class="text-gray-600 hover:text-accent transition">+34 633 96 26 00</a>
             </div>
             <div class="flex items-center space-x-3">
-                <i class="fab fa-linkedin text-accent text-xl"></i>
+                <i class="fab fa-linkedin text-accent text-xl flex-shrink-0"></i>
                 <a href="https://es.linkedin.com/in/%C3%A1lvaro-pastor-periago-89912820a" target="_blank"
                     class="text-gray-600 hover:text-accent transition">LinkedIn Perfil</a>
             </div>
             <div class="flex items-center space-x-3">
-                <i class="fab fa-github text-accent text-xl"></i>
+                <i class="fab fa-github text-accent text-xl flex-shrink-0"></i>
                 <a href="https://github.com/alvaropas17?tab=repositories" target="_blank"
                     class="text-gray-600 hover:text-accent transition">Github Repositorios</a>
             </div>
         </section>
 
-        <section class="bg-primary-dark text-white p-8 md:p-12 rounded-xl shadow-2xl mb-12" id="profesional">
-            <h2 class="text-3xl font-semibold mb-4 border-b border-gray-600 pb-3"><i
+        <section class="bg-primary-dark text-white p-6 md:p-12 rounded-xl shadow-2xl mb-12" id="profesional">
+            <h2 class="text-2xl sm:text-3xl font-semibold mb-4 border-b border-gray-600 pb-3"><i
                     class="fas fa-bullseye mr-3 text-accent"></i>Objetivo Profesional</h2>
-            <p class="text-xl font-light leading-relaxed">
+            <p class="text-base sm:text-xl font-light leading-relaxed">
                 Desarrollar soluciones innovadoras en el ámbito del <b class="font-medium text-accent">desarrollo
                     web</b> y el <b class="font-medium text-accent">marketing digital</b>,
                 aplicando mis conocimientos y experiencia para optimizar procesos y mejorar la experiencia de
@@ -125,8 +138,8 @@
 
         <div class="space-y-10 mb-12">
 
-            <section class="bg-white p-8 rounded-xl shadow-lg border-l-4 border-accent" id="formacion">
-                <h2 class="text-3xl font-semibold text-primary-dark mb-6">
+            <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent" id="formacion">
+                <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
                     <i class="fas fa-graduation-cap mr-3 text-accent"></i>Formación y Títulos
                 </h2>
 
@@ -173,8 +186,8 @@
                 </div>
             </section>
 
-            <section class="bg-white p-8 rounded-xl shadow-lg border-l-4 border-accent" id="experiencia">
-                <h2 class="text-3xl font-semibold text-primary-dark mb-6">
+            <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent" id="experiencia">
+                <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
                     <i class="fas fa-briefcase mr-3 text-accent"></i>Experiencia Profesional
                 </h2>
 
@@ -189,13 +202,13 @@
                         <ul class="list-none space-y-1 text-sm text-gray-700">
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
-                                de Google Analytics y GSC.</li>
+                                de **Google Analytics** y **GSC**.</li>
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Análisis
                                 exhaustivo del contenido.</li>
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Mejora
-                                significativa en la visibilidad online.</li>
+                                significativa en la **visibilidad online**.</li>
                         </ul>
                     </div>
                 </div>
@@ -203,7 +216,7 @@
 
         </div>
 
-        <div class="grid lg:grid-cols-3 gap-10 mb-12">
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 mb-12">
 
             <section class="bg-white p-6 rounded-xl shadow-lg h-full" id="competencias">
                 <h2 class="text-xl font-semibold text-primary-dark mb-4 border-b pb-2"><i
@@ -265,20 +278,20 @@
             </section>
         </div>
 
-        <section class="bg-white p-8 rounded-xl shadow-2xl" id="proyecto">
-            <h2 class="text-3xl font-semibold text-primary-dark mb-6 border-b pb-3"><i
+        <section class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl" id="proyecto">
+            <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6 border-b pb-3"><i
                     class="fas fa-laptop-code mr-3 text-accent"></i>Proyecto Destacado</h2>
             <div class="iframe-container shadow-xl">
                 <iframe src="https://alvaropas17.github.io/web_gala_imparables/" title="Proyecto de Gala Imparables"
                     loading="lazy"></iframe>
             </div>
-            <div class="mt-6 flex space-x-4">
+            <div class="mt-6 flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
                 <a href="https://alvaropas17.github.io/web_gala_imparables/" target="_blank"
-                    class="px-6 py-2 bg-accent text-white font-medium text-sm rounded-lg hover:bg-opacity-90 transition shadow-lg">
+                    class="px-6 py-2 bg-accent text-white font-medium text-sm rounded-lg hover:bg-opacity-90 transition shadow-lg text-center">
                     <i class="fas fa-external-link-alt mr-2"></i>Ver en Vivo
                 </a>
                 <a href="https://github.com/alvaropas17/web_gala_imparables" target="_blank"
-                    class="px-6 py-2 border border-gray-300 text-primary-dark font-medium text-sm rounded-lg hover:bg-gray-100 transition">
+                    class="px-6 py-2 border border-gray-300 text-primary-dark font-medium text-sm rounded-lg hover:bg-gray-100 transition text-center">
                     <i class="fab fa-github mr-2"></i>Ver Repositorio
                 </a>
             </div>
@@ -286,7 +299,7 @@
 
         <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
             class="float-wa" target="_blank">
-            <i class="fa fa-whatsapp" style="margin-top:16px;"></i>
+            <i class="fa fa-whatsapp"></i>
         </a>
 
     </main>
@@ -296,4 +309,5 @@
     </footer>
 </body>
 
-</html>
+        </html>
+        
