--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    
+
     <style>
         .iframe-container {
             position: relative;
             width: 100%;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio */
+            padding-top: 56.25%;
+            /* 16:9 Aspect Ratio */
             overflow: hidden;
             border-radius: 0.5rem;
         }
+
         .iframe-container iframe {
             position: absolute;
             top: 0;
@@ -56,12 +58,14 @@
             height: 100%;
             border: 0;
         }
+
         .float-wa {
             position: fixed;
             width: 60px;
             height: 60px;
             bottom: 40px;
-            right: 20px; /* Ajuste para móvil: más cerca del borde */
+            right: 20px;
+            /* Ajuste para móvil: más cerca del borde */
             background-color: #25d366;
             color: #FFF;
             border-radius: 50px;
@@ -108,12 +112,15 @@
     <main class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 my-12 md:my-20">
 
         <header class="text-center mb-16 p-6 sm:p-8 bg-white rounded-xl shadow-2xl border-t-4 border-accent">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-primary-dark tracking-tight">Álvaro Pastor</h1>
-            <h2 class="text-lg sm:text-xl md:text-2xl text-gray-500 font-light mt-2 tracking-wide">Desarrollo Web y Marketing
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-primary-dark tracking-tight">Álvaro Pastor
+            </h1>
+            <h2 class="text-lg sm:text-xl md:text-2xl text-gray-500 font-light mt-2 tracking-wide">Desarrollo Web y
+                Marketing
                 Digital</h2>
         </header>
 
-        <section class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white p-6 md:p-8 rounded-xl shadow-lg mb-12" id="contacto">
+        <section class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white p-6 md:p-8 rounded-xl shadow-lg mb-12"
+            id="contacto">
             <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark md:col-span-2 border-b pb-3 mb-4"><i
                     class="fas fa-address-card mr-3 text-accent"></i>Datos de Contacto</h2>
 
@@ -169,7 +176,8 @@
 
                     <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
                         <p class="text-xs text-gray-500 mb-1">2020 - 2025</p>
-                        <h4 class="text-lg font-semibold text-primary-dark">Grado en Marketing Digital y Redes Sociales
+                        <h4 class="text-lg font-semibold text-primary-dark">Grado en Marketing y Dirección Comercial con
+                            mención en marketing digital
                         </h4>
                         <p class="text-sm text-gray-600">UCAM</p>
                     </div>
@@ -180,23 +188,24 @@
 
                     <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
                         <p class="text-xs text-gray-500 mb-1">2023</p>
-                        <h4 class="text-lg font-semibold text-primary-dark">Curso Avanzado de SEO y Estrategia de
-                            Contenidos</h4>
-                        <p class="text-sm text-gray-600">Plataforma Digital Pro</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Curso de creación de empresas</h4>
+                        <p class="text-sm text-gray-600">Cámara de comercio</p>
                     </div>
 
-                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
-                        <p class="text-xs text-gray-500 mb-1">2022</p>
-                        <h4 class="text-lg font-semibold text-primary-dark">Certificación en Google Analytics 4 (GA4)
-                        </h4>
-                        <p class="text-sm text-gray-600">Google Academy</p>
-                    </div>
 
                     <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
                         <p class="text-xs text-gray-500 mb-1">2016 - 2018</p>
                         <h4 class="text-lg font-semibold text-primary-dark">Experiencia en el Extranjero</h4>
                         <p class="text-sm text-gray-600">Inmersión lingüística en Inglaterra e Irlanda.</p>
                     </div>
+
+                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
+                        <p class="text-xs text-gray-500 mb-1">2010 - 2015</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Campamentos de inglés a nivel nacional
+                        </h4>
+                        <!-- <p class="text-sm text-gray-600">Google Academy</p> -->
+                    </div>
+
                 </div>
             </section>
 
@@ -207,7 +216,7 @@
 
                 <div class="space-y-6">
                     <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
-                        <p class="text-xs text-gray-500 mb-1">Fecha Inicio - Fecha Fin</p>
+                        <p class="text-xs text-gray-500 mb-1">Septiembre 2025 - Actualmente</p>
                         <h4 class="text-lg font-semibold text-primary-dark">Especialista en Marketing Digital y
                             Desarrollo Web</h4>
                         <p class="text-sm text-accent mb-3">Inversus</p>
@@ -216,13 +225,55 @@
                         <ul class="list-none space-y-1 text-sm text-gray-700">
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
-                                de **Google Analytics** y **GSC**.</li>
+                                de Google Analytics y GSC.</li>
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Análisis
                                 exhaustivo del contenido.</li>
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Mejora
-                                significativa en la **visibilidad online**.</li>
+                                significativa en la visibilidad online.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent mt-8" id="proyectos">
+                <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
+                    <i class="fas fa-rocket mr-3 text-accent"></i>Proyectos Académicos y Personales
+                </h2>
+
+                <div class="space-y-6">
+                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
+                        <p class="text-xs text-gray-500 mb-1">2023 - Actualmente</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Proyectos Universitarios en Marketing
+                            Digital</h4>
+                        <p class="text-sm text-accent mb-3">Ámbito Académico</p>
+                        <ul class="list-none space-y-1 text-sm text-gray-700">
+                            <li class="flex items-start"><i
+                                    class="fas fa-code-branch text-accent mt-1 mr-2 flex-shrink-0"></i>Elaboración de
+                                planes de
+                                marketing, email marketing y estrategias de redes sociales aplicadas a proyectos
+                                académicos.
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
+                        <p class="text-xs text-gray-500 mb-1">2018 - 2019</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Crecimiento Orgánico de Cuenta de Instagram
+                        </h4>
+                        <p class="text-sm text-accent mb-3">Proyecto Personal</p>
+                        <ul class="list-none space-y-1 text-sm text-gray-700">
+                            <li class="flex items-start"><i
+                                    class="fas fa-chart-line text-accent mt-1 mr-2 flex-shrink-0"></i>Crecimiento
+                                orgánico de una
+                                cuenta de Instagram de entretenimiento de 0 a 13.000 seguidores.
+                            </li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-users text-accent mt-1 mr-2 flex-shrink-0"></i>Gestión de contenido,
+                                interacción
+                                con la comunidad y aplicación de estrategias de engagement.
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -323,5 +374,4 @@
     </footer>
 </body>
 
-        </html>
-        
+</html>
