--- a/index.html
+++ b/index.html
@@ -344,21 +344,18 @@
         </div>
 
         <section class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl" id="proyecto">
-            <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6 border-b pb-3"><i
-                    class="fas fa-laptop-code mr-3 text-accent"></i>Proyecto Destacado</h2>
-            <div class="iframe-container shadow-xl">
-                <iframe src="https://alvaropas17.github.io/web_gala_imparables/" title="Proyecto de Gala Imparables"
-                    loading="lazy"></iframe>
-            </div>
-            <div class="mt-6 flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
-                <a href="https://alvaropas17.github.io/web_gala_imparables/" target="_blank"
-                    class="px-6 py-2 bg-accent text-white font-medium text-sm rounded-lg hover:bg-opacity-90 transition shadow-lg text-center">
-                    <i class="fas fa-external-link-alt mr-2"></i>Ver en Vivo
-                </a>
-                <a href="https://github.com/alvaropas17/web_gala_imparables" target="_blank"
-                    class="px-6 py-2 border border-gray-300 text-primary-dark font-medium text-sm rounded-lg hover:bg-gray-100 transition text-center">
-                    <i class="fab fa-github mr-2"></i>Ver Repositorio
-                </a>
+            <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6 border-b pb-3">
+                <i class="fas fa-laptop-code mr-3 text-accent"></i>Proyecto Destacado
+            </h2>
+
+            <div
+                class="flex flex-col items-center justify-center h-40 bg-gray-50 rounded-lg border-2 border-dashed border-gray-300 p-4">
+                <p class="text-xl sm:text-2xl font-bold text-gray-700">
+                    Proyectos propios comming soon 🤫
+                </p>
+                <p class="text-sm text-gray-500 mt-2">
+                    Estamos trabajando en algo genial. ¡Vuelve pronto!
+                </p>
             </div>
         </section>
 
