--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Profesional - Álvaro Pastor (Premium Mobile First)</title>
+    <title>Álvaro Pastor - CV Profesional</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
