--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
 
     </main>
 
-    <footer class="bg-primary-dark text-white text-center py-6 mt-16">
+    <!-- <footer class="bg-primary-dark text-white text-center py-6 mt-16">
         <p class="text-sm">&copy; 2025 Álvaro Pastor. Diseño Premium con Tailwind CSS.</p>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
