cambios en competencias técnicas

--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
                     <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">WordPress
                         / CMS</span>
+                    <span
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Inteligencia artificial generativa</span>
                 </div>
 
                 <h2 class="text-xl font-semibold text-primary-dark mt-6 mb-4 border-b pb-2"><i
