cambiado el color del desarrollo web y marketing

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <h2 class="text-2xl sm:text-3xl font-semibold mb-4 border-b border-gray-600 pb-3"><i
                     class="fas fa-bullseye mr-3 text-accent"></i>Objetivo Profesional</h2>
             <p class="text-base sm:text-xl font-light leading-relaxed">
-                Desarrollar soluciones innovadoras en el ámbito del <b class="font-medium text-accent">desarrollo
-                    web</b> y el <b class="font-medium text-accent">marketing digital</b>,
+                Desarrollar soluciones innovadoras en el ámbito del <b class="font-medium-text-accent">desarrollo
+                    web</b> y el <b class="font-medium-text-accent">marketing digital</b>,
                 aplicando mis conocimientos y experiencia para optimizar procesos y mejorar la experiencia de
                 usuario. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito
                 del equipo.
