cambio en al nav bar

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-center items-center h-12">
                 <div class="flex space-x-8">
+                    <a href="#"
+                        class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150">Inicio</a>
                     <a href="#contacto"
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150">Contacto</a>
                     <a href="#profesional"
