corregido el scroll

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
         .fa-whatsapp {
             margin-top: 15px;
         }
+
+        /* Offset para compensar la barra de navegación fija */
+        section[id] {
+            scroll-margin-top: 100px; /* Ajusta este valor según la altura de tu navbar */
+        }
+        
+        header[id] {
+            scroll-margin-top: 100px;
+        }
     </style>
 
 </head>
