--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow">
+
     <title>Álvaro Pastor - CV Profesional</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
