cambiada url de proyectos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150">Experiencia</a>
                     <a href="#competencias"
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150">Competencias</a>
-                    <a href="./portfolio.html"
+                    <a href="#proyectos"
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150">Portfolio</a>
                 </div>
 
