favicon añadido y añadida descripción SEO

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="CV Álvaro Pastor - Desarrollo Web y Marketing Digital">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <meta property="og:description"
+        content="Conoce mi experiencia en desarrollo web, marketing digital y proyectos destacados.">
     <meta name="robots" content="index,follow">
-
-    <title>Álvaro Pastor - CV Profesional</title>
+    <title>Web developer and marketing - Álvaro Pastor CV</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
