cambiado objetivo profesional

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             <p class="text-base sm:text-xl font-light leading-relaxed">
                 Desarrollar soluciones innovadoras en el ámbito del <b class="font-medium-text-accent">desarrollo
                     web</b> y el <b class="font-medium-text-accent">marketing digital</b>,
-                aplicando mis conocimientos y experiencia para optimizar procesos y mejorar la experiencia de
-                usuario. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito
+                aplicando mis conocimientos y experiencia para <b class="font-medium-text-accent">optimizar procesos y mejorar la experiencia de
+                usuario</b>. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito
                 del equipo.
             </p>
         </section>
