--- a/es/index_es.html
+++ b/es/index_es.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="CV Álvaro Pastor - Desarrollo Web y Marketing Digital">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../es/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <meta property="og:description"
         content="Conoce mi experiencia en desarrollo web, marketing digital y proyectos destacados.">
     <meta name="robots" content="index,follow">
