--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Inicio</title>
 </head>
 <body>
@@ -14,14 +14,22 @@
     <header>
         <nav class="secciones">
             <ul>
-                <li><a href="">Marketing</a></li>
-                <li><a href="">Desarrollo web</a></li>
+                <li>Portfolio web</li>
+                <li>Experiencia</li>
             </ul>
         </nav>
     </header>
 
     <h2>Mi curriculum</h2>
-    <h3>Trabajo en Inversus</h3>
+
+    <section class="article" id="experiencia">
+        <h3>Experiencia</h3>
+        <p>Inversus - <b>Septiembre 2025 - Actualidad</b></p>
+        <li>Lideré un proyecto de desarrollo web para aumentar la presencia digital. <br> Usé tecnologías como HTML5, CSS3 y JavaScript para llevar a cabo el desarrollo de la página.</li>
+    </section>
+
+
+    <!-- <h3>Trabajo en Inversus</h3>
     <h3>Resultados</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus commodi velit sit dolor placeat, delectus similique, praesentium a natus explicabo sequi eius ipsam magnam, eaque illum fuga repellendus recusandae labore.</p>
 
@@ -33,6 +41,6 @@
 
     <p>Luego tenía que ver hacia qué público se querían dirigir.</p>
 
-    <p>Y luego la joya de la corona <b>Google Analytics y Google Search Console</b>. Cuando yo llegué no había nada y tampoco tenían control sobre ello porque hasta la fecha no habían trabajado eso in house</p>
+    <p>Y luego la joya de la corona <b>Google Analytics y Google Search Console</b>. Cuando yo llegué no había nada y tampoco tenían control sobre ello porque hasta la fecha no habían trabajado eso in house</p> -->
 </body>
 </html>
