cambios en competencias técnicas

--- a/index.html
+++ b/index.html
@@ -335,7 +335,11 @@
                 <div class="flex flex-wrap gap-2">
                     <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Desarrollo
-                        Web (HTML, CSS, JS)</span>
+                        Web (HTML, CSS, JavaScript)</span>
+                    <span
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Java, MySQL</span>
+                    <span
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Git, Trello</span>
                     <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Marketing
                         Digital (SEO)</span>
