cambios en competencias técnicas

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <div class="flex flex-wrap gap-2">
                     <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Desarrollo
-                        Web (HTML, CSS, JavaScript)</span>
+                        Web (HTML, CSS, JS)</span>
                     <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Java, MySQL</span>
                     <span
