cambiado enlace de repositorios y perfil github

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             </div>
             <div class="flex items-center space-x-3">
                 <i class="fab fa-github text-accent text-xl flex-shrink-0"></i>
-                <a href="https://github.com/alvaropas17?tab=repositories" target="_blank"
-                    class="text-gray-600 hover:text-accent transition">Github Repositorios</a>
+                <a href="https://github.com/alvaropas17" target="_blank"
+                    class="text-gray-600 hover:text-accent transition">Perfil Github</a>
             </div>
         </section>
 
