--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="CV Álvaro Pastor - Desarrollo Web y Marketing Digital">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/styles.css">
     <meta property="og:description"
         content="Conoce mi experiencia en desarrollo web, marketing digital y proyectos destacados.">
     <meta name="robots" content="index,follow">
-    <title>Desarrollo web y marketing digital - Álvaro Pastor CV</title>
+    <link rel="alternate" hreflang="es" href="../es/" />
+    <link rel="alternate" hreflang="en" href="../en/" />
+    <link rel="alternate" hreflang="x-default" href="../es/" />
+    <title>Web developer and marketing - Álvaro Pastor CV</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -45,7 +49,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
-
+    <script src="https://t.contentsquare.net/uxa/70095ab3329d7.js"></script>
     <!-- <style>
        
     </style> -->
@@ -96,8 +100,20 @@
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150">Portfolio</a>
                 </div>
 
+                <!-- Language Selector -->
+                <div class="hidden sm:flex items-center space-x-2">
+                    <span class="text-sm font-medium text-primary-dark bg-accent text-white px-2 py-1 rounded">🇪🇸
+                        ES</span>
+                    <a href="../en/"
+                        class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150 px-2 py-1 rounded border hover:border-accent">🇬🇧
+                        EN</a>
+                </div>
                 <!-- Placeholder for mobile (right side balance) -->
-                <div class="w-10 sm:hidden"></div>
+                <div class="sm:hidden flex items-center">
+                    <a href="../en/"
+                        class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150 px-2 py-1 rounded border hover:border-accent">🇬🇧
+                        EN</a>
+                </div>
             </div>
         </div>
 
@@ -149,6 +165,11 @@
                             class="mobile-menu-link block px-4 py-3 text-base font-medium text-primary-dark hover:text-accent hover:bg-gray-50 rounded-lg transition duration-150">
                             <i class="fas fa-laptop-code w-5 mr-3 text-accent"></i>Proyecto
                         </a>
+                        <hr class="my-4 border-gray-200">
+                        <a href="../en/"
+                            class="mobile-menu-link block px-4 py-3 text-base font-medium text-primary-dark hover:text-accent hover:bg-gray-50 rounded-lg transition duration-150">
+                            <i class="fas fa-globe w-5 mr-3 text-accent"></i>🇬🇧 English Version
+                        </a>
                     </div>
                 </nav>
             </div>
@@ -197,8 +218,8 @@
             <p class="text-base sm:text-xl font-light leading-relaxed">
                 Desarrollar soluciones innovadoras en el ámbito del <b class="font-medium-text-accent">desarrollo
                     web</b> y el <b class="font-medium-text-accent">marketing digital</b>,
-                aplicando mis conocimientos y experiencia para <b class="font-medium-text-accent">optimizar procesos y mejorar la experiencia de
-                usuario</b>. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito
+                aplicando mis conocimientos y experiencia para optimizar procesos y mejorar la experiencia de
+                usuario. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito
                 del equipo.
             </p>
         </section>
