quitado selector de idiomas

--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
                 </div>
 
                 <!-- Language Selector -->
-                <div class="hidden sm:flex items-center space-x-2">
+                <!-- <div class="hidden sm:flex items-center space-x-2">
                     <span class="text-sm font-medium text-primary-dark bg-accent text-white px-2 py-1 rounded">🇪🇸
                         ES</span>
                     <a href="../en/"
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150 px-2 py-1 rounded border hover:border-accent">🇬🇧
                         EN</a>
                 </div>
-                <!-- Placeholder for mobile (right side balance) -->
-                <div class="sm:hidden flex items-center">
+                 Placeholder for mobile (right side balance) -->
+                <!-- <div class="sm:hidden flex items-center">
                     <a href="../en/"
                         class="text-sm font-medium text-primary-dark hover:text-accent transition duration-150 px-2 py-1 rounded border hover:border-accent">🇬🇧
                         EN</a>
-                </div>
+                </div> -->
             </div>
         </div>
 
